# nanamin-cbz-optimizer

./: .gitignore  CHANGELOG.md  LICENSE  Nanamin.spec  NanaminCert.cer  NanaminCert.pem  NanaminKey.pem  README.md  create_dmg.sh  create_exe.py  create_pkg.sh  manga_compressor.spec  pyproject.toml  qt_hook.py  rebuild_app.sh  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/: main.py
src/assets/: icon.icns  nanamin_icon.icns
src/utils/: compressor.py
